--- a/resources/assets/sass/arklab/sass/products.scss
+++ b/resources/assets/sass/arklab/sass/products.scss
@@ -144,8 +144,11 @@ html, body {
 	}
 
 	.preOrderBlock {
-		height: 40%;
+		height: 55%;
 		width: 100%;
+
+		padding-top: 84px;
+		padding-bottom: 20px;
 
 		@include breakpoint($large) {
 			h1 {
@@ -691,10 +694,9 @@ html, body {
 		
 		@include breakpoint($large) {
 			width: 100%;
-			height: 100%;
 		}
 
-		padding-top: 60px;
+		padding-top: 84px;
 		padding-bottom: 20px;
 
 		margin: 0 0 0 0 ;
@@ -796,32 +798,5 @@ html, body {
 		}
 	}
 
-	.error {
-		.input-field label {
-	     color: #d32f2f;
-	   }
-	   /* label focus color */
-	   .input-field input[type=text]:focus + label {
-	     color: #d32f2f;
-	   }
-	   /* label underline focus color */
-	   .input-field input[type=text]:focus {
-	     border-bottom: 1px solid #d32f2f;
-	     box-shadow: 0 1px 0 0 #d32f2f;
-	   }
-	   /* valid color */
-	   .input-field input[type=text].valid {
-	     border-bottom: 1px solid #d32f2f;
-	     box-shadow: 0 1px 0 0 #d32f2f;
-	   }
-	   /* invalid color */
-	   .input-field input[type=text].invalid {
-	     border-bottom: 1px solid #d32f2f;
-	     box-shadow: 0 1px 0 0 #d32f2f;
-	   }
-	   /* icon prefix focus color */
-	   .input-field .prefix.active {
-	     color: #d32f2f;
-	   }
-	}
+
 }
