--- a/resources/assets/sass/arklab/sass/products.scss
+++ b/resources/assets/sass/arklab/sass/products.scss
@@ -797,6 +797,19 @@ html, body {
 			-webkit-text-fill-color: transparent;
 		}
 	}
+	
+	.buyReulst {
+		background-color:#fafafa;
+	    color: #263238;
+	    padding: 20px 20px 20px 20px;
+	}
 
+	.buyResultBlock {
+		background-color: #eeeeee;
+	    border-radius: 5px;
+	    color: #263238;
+	    padding: 10px 10px 10px 10px;
+	    margin: 10px 10px 10px 10px;
 
+	}
 }
